--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    background-color: #e6e6e6;
+    width: 100vw;
+    overflow: hidden;
+    font-family: sans-serif;
+}
