--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body{
-    /* background-color: #ac9acf; */
+    background-color: #e5dcf7;
     width: 100vw;
     overflow: hidden;
     font-family: sans-serif;
